# quickmapservices

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  COMPONENTS  Makefile  Makefile.py  README.md  build_pack.sh  pyproject.toml  quick_map_services.sublime-project  setup.py  update_translates.sh
.github/ISSUE_TEMPLATE/: 01_bug_report.yaml  02_feature_request.yaml  config.yml
quick_map_services/: about_dialog.py  config_reader_helper.py  data_source_info.py  data_source_serializer.py  data_sources_model.py  extra_sources.py  file_selection_widget.py  gdal_utils.py  group_edit_dialog.ui  quick_map_services.py  settings_dialog_base.ui  singleton.py  supported_drivers.py
quick_map_services/gui/: editor_widget_tms.py  editor_widget_tms.ui
quick_map_services/py_tiled_layer/: propertiesdialog.py  tilelayer.py  tiles.py
scripts/: _update-strings.sh  compile-strings.sh
src/: __init__.py  about_dialog.py  about_dialog_base.ui  compat.py  compat2qgis.py  config_reader_helper.py  custom_translator.py  data_source.py  data_source_factory.py  data_source_info.py  data_source_serializer.py  data_sources_list.py  data_sources_model.py  ds_edit_dialog.py  ds_edit_dialog.ui  ds_groups_list.py  extra_sources.py  file_selection_widget.py  fixed_config_parser.py  gdal_utils.py  group_edit_dialog.py  group_factory.py  group_info.py  groups_list.py  locale.py  map_services.py  map_services_settings_dialog.py  map_services_settings_dialog_base.ui  metadata.txt  plugin_locale.py  plugin_settings.py  qgis_map_helpers.py  qgis_proj_helper.py  qgis_settings.py  qms_news.py  qms_service_toolbox.py  qms_service_toolbox.ui  quick_map_services.py  rb_result_renderer.py  resources.qrc  (+11 more)
src/groups/: osm.ini
src/gui/: __init__.py  editor_widget_gdal.py  editor_widget_gdal.ui  editor_widget_geojson.py  editor_widget_tms.py  editor_widget_wfs.py  editor_widget_wfs.ui  editor_widget_wms.py  editor_widget_wms.ui  editor_widget_wmts.py  editor_widget_wmts.ui  line_edit_color_validator.py
src/i18n/: QuickMapServices_ru.qm  QuickMapServices_ru.ts  base.ts  mapservices_ru.qm  mapservices_ru.ts
src/py_tiled_layer/: downloader.py  propertiesdialog.py  propertiesdialog.ui  tilelayer.py  tiles.py  ui_propertiesdialog.py
src/quick_map_services/: __init__.py  about_dialog.py  about_dialog_base.ui  compat.py  compat2qgis.py  ds_edit_dialog.py  (+33 more)
test/: qgis_interface.py  test_map_services_dialog.py  test_qgis_environment.py  test_resources.py  test_translations.py  utilities.py
(+83 files in other folders)
